--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,14 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+# theme: minima
+theme: jekyll-theme-persephone
 plugins:
   - jekyll-feed
 
 # Persephone theme
-theme: jekyll-theme-persephone
+# theme: jekyll-theme-persephone
+remote_theme: erlzhang/jekyll-theme-persephone
 
 # Exclude from processing.
 # The following items will not be processed, by default.
