--- a/_config.yml
+++ b/_config.yml
@@ -31,14 +31,10 @@ github_username:  jekyll
 
 # Build settings
 # theme: minima
-theme: jekyll-theme-persephone
+remote_theme: aterenin/minima-reboot
 plugins:
   - jekyll-feed
-  - jekyll-include-cache
-  
-# Persephone theme
-# theme: jekyll-theme-persephone
-remote_theme: erlzhang/jekyll-theme-persephone
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
