--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  LeonSilva15
 
+syntax_highlighter_style: pastie
+
+collections:
+  posts:
+    output: true
+    permalink: /:collection/:path/
+
 # Build settings
 # theme: minima
 # remote_theme: aterenin/minima-reboot
